--- a/public/pages/market-item.html
+++ b/public/pages/market-item.html
@@ -11,15 +11,7 @@
   <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
 </head>
 <body>
-  <div id="app">
-    <aside id="sidebar">
-      <div class="sidebar-top">
-        <a href="/home" class="logo-link">
-          <img src="/img/logo.png" alt="Tublox" class="sidebar-logo-img">
-          <span class="logo">TUBLOX</span>
-        </a>
-      </div>
-        <div id="app">
+    <div id="app">
     <aside id="sidebar">
       <div class="sidebar-top">
         <a href="/home" class="logo-link">
@@ -28,13 +20,13 @@
         </a>
       </div>
       <nav class="sidebar-nav">
-        <a href="/home" class="nav-item">
+        <a href="/home" class="nav-item active">
           <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M4 10L12 3l8 7v9a2 2 0 01-2 2h-4v-5a1 1 0 00-1-1h-2a1 1 0 00-1 1v5H6a2 2 0 01-2-2z"/>
           </svg>
           <span>Home</span>
         </a>
-        <a href="/studio" class="nav-item active">
+        <a href="/studio" class="nav-item">
           <svg class="nav-svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <rect x="3" y="3" width="7" height="7" rx="1"/>
             <rect x="14" y="3" width="7" height="7" rx="1"/>
@@ -87,6 +79,7 @@
         <button id="btn-logout" class="btn-logout">Logout</button>
       </div>
     </aside>
+
 
     <!-- MAIN CONTENT -->
     <main id="main">
