--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -6,7 +6,6 @@
   <title>Tublox - Home</title>
   <link rel="stylesheet" href="/css/home.css">
   <link rel="icon" type="image/png" href="/img/logo.png">
-
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -80,8 +79,8 @@
     </aside>
 
     <main id="main">
-      <!-- DAILY REWARD -->
-      <div id="daily-reward" class="daily-reward" style="display:none">
+      <!-- DAILY REWARD MODAL -->
+      <div id="daily-reward" class="daily-reward">
         <div class="daily-reward-overlay"></div>
         <div class="daily-reward-panel">
           <div class="daily-header">
@@ -91,7 +90,7 @@
               <p class="strike-count">Day <span id="daily-strike-num">1</span></p>
             </div>
           </div>
-          <div id="streak-reset-msg" class="streak-reset" style="display:none">
+          <div id="streak-reset-msg" class="streak-reset">
             <span>Streak reset! Start a new one!</span>
           </div>
           <div class="strike-progress">
